test: 为 hant 语言表达式功能相关代码添加单测